
syntax = "proto3";

option csharp_namespace = "LonelyInterviewAudioSession";

package Interview;


message AudioChunkRequest {
  string candidate_id = 1;
  bytes audio_data = 2;      
}


message AudioChunkResponse {
  string candidate_id = 1;
  bytes audio_data = 2;      
}

service AudioSession
{
	rpc DataStream (stream AudioChunkRequest) returns (stream AudioChunkResponse);
}

